# prototype-entanglement-forging

./: .gitignore  .pylintrc  .stestr.conf  CITATION.bib  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: makefile.yml  tests.yml
docs/1-tutorials/: ActiveSpace_TS_Hamiltonian.ipynb  Untitled.ipynb  tutorial_1_H2_molecule_statevector_simulator.ipynb  tutorial_2_H2O_molecule_statevector_simulator.ipynb  tutorial_3_H2_arbitrary_hamiltonian.ipynb  tutorial_4_H2_qasm_simulator.ipynb  tutorial_5_H2_equilibrium_distance.ipynb  tutorial_6_TS_asymmetric_bitstrings.ipynb
docs/2-reference_guide/: reference_guide.md
docs/3-explanatory_material/: explanatory_material.md
documentation/1-tutorials/: tutorial_1_H2_molecule_statevector_simulator.ipynb  tutorial_2_H2O_molecule_statevector_simulator.ipynb  tutorial_3_H2_arbitrary_hamiltonian.ipynb  tutorial_4_H2_qasm_simulator.ipynb  tutorial_5_H2_equilibrium_distance.ipynb
documentation/2-how_to_guides/: how_to_find_equilibrium_distance.ipynb
documentation/2-reference_guide/: reference_guide.md
documentation/3-explanatory_material/: explanatory_material.md
documentation/3-reference_guide/: reference_guide.md
documentation/4-explanatory_material/: explanatory_material.md
entanglement_forging/: __init__.py
entanglement_forging/core/: cholesky_hamiltonian.py  classical_energies.py  entanglement_forged_config.py  forged_operator.py  orbitals_to_reduce.py
entanglement_forging/core/wrappers/: __init__.py  entanglement_forged_driver.py  entanglement_forged_ground_state_eigensolver.py  entanglement_forged_vqe.py  entanglement_forged_vqe_result.py
entanglement_forging/utils/: __init__.py  bootstrap_result.py  combined_result.py  copysample_circuits.py  forging_subroutines.py  generic_execution_subroutines.py  log.py  meas_mit_filters_faster.py  meas_mit_fitters_faster.py  prepare_bitstring.py  pseudorichardson.py
entanglement_forging/utils/legacy/: __init__.py  base_operator.py  common.py  op_converter.py  pauli_graph.py  tpb_grouped_weighted_pauli_operator.py  weighted_pauli_operator.py
tests/unit_tests/: test_orbitals_to_reduce.py
tests/wrappers/: test_entanglement_forged_ground_state_eigensolver.py
tests/wrappers/test_data/: CN_one_body.npy  CN_two_body.npy  OH_one_body.npy  OH_two_body.npy  TS_one_body.npy  TS_two_body.npy  two_body_alpha_alpha.npy
