[metadata]
name = entanglement_forging
description = a Python library for conducting entanglement forging
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/IBM-Quantum-Prototypes/entanglement-forging
author = Caleb Johnson, Iskandar Sitdikov
author_email = caleb.johnson@ibm.com, iskandar.sitdikov@ibm.com
license_file = LICENSE.txt
classifiers =
    Environment :: MacOS X
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Quantum Computing

[options]
packages = find:
python_requires = >=3.7
install_requires=
    setuptools>=58.0
    packaging>=21.0
    qiskit_nature>=0.3.0
    qiskit_terra>=0.19.1
    qiskit_ignis>=0.7.0
    qiskit_aer>=0.10.2
    qiskit_ibmq_provider>=0.18.3
    pyscf>=2.0.1
    h5py>=3.6.0
    matplotlib>=3.5.1
    ipywidgets>=7.6.5
    jupyter

[options.packages.find]
where = entanglement_forging
exclude =
    tests

[options.extras_require]
testing =
    build
    #
    tox
    pytest
    treon
    pylint
    nbmake
    pycodestyle
