[metadata]
name = entanglement_forging
version = 0.0.0

[options]
packages = find:
install_requires=
    qiskit_nature>=0.3.0
    qiskit_terra>=0.19.1
    qiskit_ignis>=0.7.0
    qiskit_aer>=0.10.2
    qiskit_ibmq_provider>=0.18.3
    pyscf>=2.0.1
    h5py>=3.6.0
    matplotlib>=3.5.1
    ipywidgets>=7.6.5
    jupyter

[options.extras_require]
testing =
    build
    #
    tox
    pytest
    treon
    pylint
    nbmake
    pycodestyle
