[metadata]
name = entanglement_forging
version = 0.0.0
url = https://github.com/qiskit-community/prototype-entanglement-forging
maintainer = Caleb Johnson
maintainer_email = caleb.johnson@ibm.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
license = Apache 2.0
description = Simulate chemical and physical systems using entanglement forging.
long_description = This module allows a user to simulate chemical and physical systems using a variational quantum eigensolver enhanced by entanglement forging. Entanglement forging doubles the size of the system that can be exactly simulated on a fixed set of quantum bits.
keywords = quantum, nature, simulation


[options]
packages = find:
install_requires=
    qiskit_nature>=0.3.0
    qiskit_terra>=0.19.1
    qiskit_ignis>=0.7.0
    qiskit_aer>=0.10.2
    qiskit_ibmq_provider>=0.18.3
    pyscf>=2.0.1
    h5py>=3.6.0
    matplotlib>=3.5.1
    ipywidgets>=7.6.5
    jupyter

[options.extras_require]
dev =
    build
    pytest
    treon
    tox
    black==21.9b0
test =
    treon
    black==21.9b0
    pytest
